--- a/css/style.css
+++ b/css/style.css
@@ -649,3 +649,40 @@
     object-fit: contain;
     padding: 5vw 0 5vw 0;
 }
+/*-------------------------cards_team------------------------*/
+ .wrapper_team_cards{
+    padding-bottom: 5vw;
+ }
+.cards_team {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: flex-start;
+}
+.card_team {
+    width: 24%;
+    min-height: 350px;
+    position: relative;
+}
+.card_team img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width:100%;
+    height: 100%;
+    object-fit: cover;
+}
+.title_team{
+    width: 70%;
+    position: absolute;
+    bottom: -20px;
+    left: 15%;
+    text-align: center;
+    background: white;
+    padding: 1vh;
+}
+.title_team h3{
+    margin-bottom: 1vh;
+    color: #11749e;
+    font-weight: 500;
+}
