--- a/css/style.css
+++ b/css/style.css
@@ -1236,6 +1236,10 @@ body {
 }
 
 @media (max-width: 575px) { 
+    .wrapper_header {
+        height: 90vh;
+    }
+
     #logo {
         display: none;
     }
