--- a/css/style.css
+++ b/css/style.css
@@ -1286,7 +1286,6 @@ body {
         margin-top: 0;
         background: #000;
         padding: 10px;
-
     }
 
     .main_line {
@@ -1337,7 +1336,7 @@ body {
     .main {
         left: 0;
         top: -100%;
-        background: rgba(0,0,0,1);
+        background: red/*rgba(0,0,0,1)*/;
         width: 100%;
         height: 100%;
         position: fixed;
